Improve run configurations. Minor fixes.